--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-scripts": "4.0.2",
     "react-scroll": "^1.8.1",
     "styled-components": "^5.2.1",
+    "styled-icons": "^10.29.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
